debug.log
Forbidden (CSRF token missing or incorrect.): /
Internal Server Error: /
Traceback (most recent call last):
  File "C:\Python27\lib\site-packages\django\core\handlers\base.py", line 119, in get_response
    resolver_match = resolver.resolve(request.path_info)
  File "C:\Python27\lib\site-packages\django\core\urlresolvers.py", line 366, in resolve
    for pattern in self.url_patterns:
  File "C:\Python27\lib\site-packages\django\core\urlresolvers.py", line 402, in url_patterns
    patterns = getattr(self.urlconf_module, "urlpatterns", self.urlconf_module)
  File "C:\Python27\lib\site-packages\django\core\urlresolvers.py", line 396, in urlconf_module
    self._urlconf_module = import_module(self.urlconf_name)
  File "C:\Python27\lib\importlib\__init__.py", line 37, in import_module
    __import__(name)
  File ".\myproject\urls.py", line 28, in <module>
    url(r'^monitor/', include('monitor.urls', namespace="monitor")),
  File "C:\Python27\lib\site-packages\django\conf\urls\__init__.py", line 33, in include
    urlconf_module = import_module(urlconf_module)
  File "C:\Python27\lib\importlib\__init__.py", line 37, in import_module
    __import__(name)
  File ".\monitor\urls.py", line 3, in <module>
    from . import views
  File ".\monitor\views.py", line 13, in <module>
    import db_controller
  File ".\monitor\db_controller.py", line 224
    "tempIn":_data[h"eo1"],
                        ^
SyntaxError: invalid syntax
Internal Server Error: /monitor/
Traceback (most recent call last):
  File "C:\Python27\lib\site-packages\django\core\handlers\base.py", line 132, in get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File ".\monitor\views.py", line 24, in index
    response_data = db_controller.read_data_from_json()
  File ".\monitor\db_controller.py", line 203, in read_data_from_json
    datetime, op_mode
UnboundLocalError: local variable 'datetime' referenced before assignment
Internal Server Error: /monitor/
Traceback (most recent call last):
  File "C:\Python27\lib\site-packages\django\core\handlers\base.py", line 132, in get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File ".\monitor\views.py", line 24, in index
    response_data = db_controller.read_data_from_json()
  File ".\monitor\db_controller.py", line 317, in read_data_from_json
    if rt.RT < 20:
NameError: global name 'rt' is not defined
Internal Server Error: /monitor/
Traceback (most recent call last):
  File "C:\Python27\lib\site-packages\django\core\handlers\base.py", line 132, in get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File ".\monitor\views.py", line 24, in index
    response_data = db_controller.read_data_from_json()
  File ".\monitor\db_controller.py", line 394, in read_data_from_json
    new_cmd1.save();
  File "C:\Python27\lib\site-packages\django\db\models\base.py", line 710, in save
    force_update=force_update, update_fields=update_fields)
  File "C:\Python27\lib\site-packages\django\db\models\base.py", line 738, in save_base
    updated = self._save_table(raw, cls, force_insert, force_update, using, update_fields)
  File "C:\Python27\lib\site-packages\django\db\models\base.py", line 822, in _save_table
    result = self._do_insert(cls._base_manager, using, fields, update_pk, raw)
  File "C:\Python27\lib\site-packages\django\db\models\base.py", line 861, in _do_insert
    using=using, raw=raw)
  File "C:\Python27\lib\site-packages\django\db\models\manager.py", line 127, in manager_method
    return getattr(self.get_queryset(), name)(*args, **kwargs)
  File "C:\Python27\lib\site-packages\django\db\models\query.py", line 920, in _insert
    return query.get_compiler(using=using).execute_sql(return_id)
  File "C:\Python27\lib\site-packages\django\db\models\sql\compiler.py", line 974, in execute_sql
    cursor.execute(sql, params)
  File "C:\Python27\lib\site-packages\django\db\backends\utils.py", line 79, in execute
    return super(CursorDebugWrapper, self).execute(sql, params)
  File "C:\Python27\lib\site-packages\django\db\backends\utils.py", line 64, in execute
    return self.cursor.execute(sql, params)
  File "C:\Python27\lib\site-packages\django\db\utils.py", line 97, in __exit__
    six.reraise(dj_exc_type, dj_exc_value, traceback)
  File "C:\Python27\lib\site-packages\django\db\backends\utils.py", line 64, in execute
    return self.cursor.execute(sql, params)
  File "C:\Python27\lib\site-packages\django\db\backends\mysql\base.py", line 124, in execute
    return self.cursor.execute(query, args)
  File "C:\Python27\lib\site-packages\MySQLdb\cursors.py", line 174, in execute
    self.errorhandler(self, exc, value)
  File "C:\Python27\lib\site-packages\MySQLdb\connections.py", line 36, in defaulterrorhandler
    raise errorclass, errorvalue
DataError: (1406, "Data too long for column 'location' at row 1")
Internal Server Error: /
Traceback (most recent call last):
  File "C:\Python27\lib\site-packages\django\core\handlers\base.py", line 119, in get_response
    resolver_match = resolver.resolve(request.path_info)
  File "C:\Python27\lib\site-packages\django\core\urlresolvers.py", line 366, in resolve
    for pattern in self.url_patterns:
  File "C:\Python27\lib\site-packages\django\core\urlresolvers.py", line 402, in url_patterns
    patterns = getattr(self.urlconf_module, "urlpatterns", self.urlconf_module)
  File "C:\Python27\lib\site-packages\django\core\urlresolvers.py", line 396, in urlconf_module
    self._urlconf_module = import_module(self.urlconf_name)
  File "C:\Python27\lib\importlib\__init__.py", line 37, in import_module
    __import__(name)
  File ".\myproject\urls.py", line 28, in <module>
    url(r'^monitor/', include('monitor.urls', namespace="monitor")),
  File "C:\Python27\lib\site-packages\django\conf\urls\__init__.py", line 33, in include
    urlconf_module = import_module(urlconf_module)
  File "C:\Python27\lib\importlib\__init__.py", line 37, in import_module
    __import__(name)
  File ".\monitor\urls.py", line 3, in <module>
    from . import views
  File ".\monitor\views.py", line 13, in <module>
    import db_controller
  File ".\monitor\db_controller.py", line 406
    if data["heat_pump"][0]["switch"] == "ON"
                                            ^
SyntaxError: invalid syntax
Internal Server Error: /
Traceback (most recent call last):
  File "C:\Python27\lib\site-packages\django\core\handlers\base.py", line 119, in get_response
    resolver_match = resolver.resolve(request.path_info)
  File "C:\Python27\lib\site-packages\django\core\urlresolvers.py", line 366, in resolve
    for pattern in self.url_patterns:
  File "C:\Python27\lib\site-packages\django\core\urlresolvers.py", line 402, in url_patterns
    patterns = getattr(self.urlconf_module, "urlpatterns", self.urlconf_module)
  File "C:\Python27\lib\site-packages\django\core\urlresolvers.py", line 396, in urlconf_module
    self._urlconf_module = import_module(self.urlconf_name)
  File "C:\Python27\lib\importlib\__init__.py", line 37, in import_module
    __import__(name)
  File ".\myproject\urls.py", line 28, in <module>
    url(r'^monitor/', include('monitor.urls', namespace="monitor")),
  File "C:\Python27\lib\site-packages\django\conf\urls\__init__.py", line 33, in include
    urlconf_module = import_module(urlconf_module)
  File "C:\Python27\lib\importlib\__init__.py", line 37, in import_module
    __import__(name)
  File ".\monitor\urls.py", line 3, in <module>
    from . import views
  File ".\monitor\views.py", line 13, in <module>
    import db_controller
  File ".\monitor\db_controller.py", line 385
    if _data["dwp2"] != data["DWP"][1]["switch"]:
    ^
IndentationError: expected an indented block
Internal Server Error: /monitor/ajax_page_request/
Traceback (most recent call last):
  File "C:\Python27\lib\site-packages\django\core\handlers\base.py", line 132, in get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File ".\monitor\views.py", line 52, in ajax_page_request
    response_data.update(db_controller.get_operation_log(selected))
NameError: global name 'response_data' is not defined
